# bbe-typing

./: .gitignore  AUTHORS  Makefile  README.md  TODO.md  dune-project  go.sh  go_debug.sh  go_debug_test.sh  parsing.md  prompt.md  prompt_2.md  prompt_ppx.md  syntax.md
demo/: .notes.ml  dune  generated_ml.ml  presentation.ml  test_code.ml  test_code_1st_pass.ml  test_code_expanded.cmi  test_code_expanded.cmo  test_code_expanded.ml  test_code_translated.ml  test_code_typed.ml  test_debug.ml
ppx/: dune  ppx_bbe.ml
src/: .gitignore  Makefile  Makefile.dune  ast.mli  ast_aux.ml  ast_aux.mli  ast_comp.ml  ast_comp.mli  ast_expand.ml  ast_expand.mli  ast_fix.ml  ast_print.ml  ast_print.mli  bbe_rewriter.ml  blocks.ml  blocks.mli  chain.ml  chain.mli  counters.ml  debug.ml  debug.mli  dune  env.ml  env.mli  errors.ml  errors.mli  errors_aux.ml  errors_aux.mli  flags.ml  history.ml  history.mli  ocaml_to_ast.ml  ocaml_to_ast.mli  ppx_bbe.ml  repr.ml  repr.mli  small_compile.ml  small_compile.mli  tools.ml  tools.mli  (+11 more)
test/: .gitignore  Makefile  debug.ml  demo.ml  dune  presentation.ml  presentation_ocaml_version.ml  run_unit_tests_ppx.sh  unit_tests.ml  unit_tests_bbe.ml  unit_tests_ppx.ml
tools/: check_test_debug_ast.sh  compare_generated_ast.sh  dump_impl_ast.ml  dump_ppx.ml  dune  generate_artifacts.ml  print_ast.ml
tuto/: presentation.ml
