
(executable
  (modes byte exe)
  (name typer)
  (libraries typer_lib)
  (modules typer)
)

; (library
;  (name ppx_bbe)
;  (kind ppx_rewriter)
;  (libraries ppxlib typer_lib)

; ;  (modules ppx_bbe)
;   (modules_without_implementation ast)
; )

(library
 (modes byte native)
 (name typer_lib)
 (preprocess (pps ppxlib.metaquot))
 (libraries
   ppxlib
   ppxlib.metaquot_lifters
   ocamlformat-lib
   ocaml-compiler-libs.common
   pprint
 )

 (modules (:standard \ typer web))
 (modules_without_implementation ast)
)

(executable
 (modes js)
 (name web)
 (libraries
  typer_lib
  js_of_ocaml-lwt
 )
 (preprocess (pps lwt_ppx js_of_ocaml-ppx))
 (modules web)
)

(env
  (dev
    (flags (:standard -g -warn-error -16 -w -9-27-32-33-34-37))
  )
  (release
    (js_of_ocaml (flags :standard \ --pretty))
  )
)

