
(executable
  (modes byte exe)
  (name typer)
  (libraries typer_lib)
  (modules typer)
)

(executable
  (modes byte exe)
  (name bbe_rewriter)
  (libraries typer_lib)
  (modules bbe_rewriter)
)

; (executable
;   (modes byte exe)
;   (name bbe_ppx_rewriter)
;   (libraries
;     bbe_compile_only_lib
;     ocaml-compiler-libs.common)
;   (modules bbe_ppx_rewriter)
; )

(library
 (modes byte native)
 (name typer_lib)
 (preprocess (pps ppxlib.metaquot))
 (libraries
   ppxlib
   ppxlib.metaquot_lifters
   ocamlformat-lib
   ocaml-compiler-libs.common
   pprint
 )

 (modules (:standard \ typer web bbe_rewriter)) ; bbe_ppx_rewriter
 (modules_without_implementation ast)
)

; (executable
;  (modes js)
;  (name web)
;  (libraries
;   typer_lib
;   js_of_ocaml-lwt
;  )
;  (preprocess (pps lwt_ppx js_of_ocaml-ppx))
;  (modules web)
; )

(env
  (dev
    (flags (:standard -g -warn-error -16 -w -9-27-32-33-34-37))
  )
)
