(rule
 (alias runtest)
 (target unit_tests_ppx_generated.ml)
 (mode promote)
 (deps
  ../tools/dump_ppx.exe
  unit_tests_ppx.ml)
 (action
  (run %{dep:../tools/dump_ppx.exe} --output %{target} %{dep:unit_tests_ppx.ml})))

(executable
 (name unit_tests_ppx_generated)
 (modules unit_tests_ppx_generated)
 (flags (:standard -w -23-26-27-32-34-39)))

(rule
 (alias runtest)
 (deps
  unit_tests_ppx.ml)
 (action
  (run %{exe:unit_tests_ppx_generated.exe})))

; (rule
; 	(alias runtest)
; 	(deps (:mlfile unit_tests.ml))
; 	(targets unit_tests_typed.ml)
; 	(action (run %{dep:../src/typer.exe} %{mlfile}))
; )
