
(executable
  (modes exe)
  (name print_ast)
  (modules print_ast)
  (libraries
    ocamlformat-lib
    ocaml-compiler-libs.common
  )
)

(executable
  (modes exe)
  (name dump_impl_ast)
  (modules dump_impl_ast)
  (libraries
    ocaml-compiler-libs.common
  )
)

; (executable
;   (modes exe)
;   (name generate_artifacts)
;   (modules generate_artifacts)
;   (libraries
;     typer_lib
;     ocaml-compiler-libs.common
;   )
; )

; (executable
;   (modes exe)
;   (name dump_ppx)
;   (modules dump_ppx)
;   (libraries
;     typer_lib
;     ocaml-compiler-libs.common
;   )
; )
